# AB-FINAL_UNIT-25

./: 2023.xlsx  2024.xlsx  2025.xlsx  AB_FINAL-UNIT-25.ipynb  README.md  main.py  pyproject.toml
backend/: main.py  model.py  requirements.txt  test_model.py
data/: AguaEmbalsada_RioCofio_LaAcena.csv  AguaEmbalsada_RioGuadalix_Pedrezuela.csv  AguaEmbalsada_RioGuadarrama-Aulencia_LaJorosa.csv  AguaEmbalsada_RioGuadarrama-Aulencia_Navalmedio.csv  AguaEmbalsada_RioGuadarrama-Aulencia_Valmayor.csv  AguaEmbalsada_RioJarama_ElVado.csv  AguaEmbalsada_RioLosMorales_LosMorales.csv  AguaEmbalsada_RioLozoya_ElAtazar.csv  AguaEmbalsada_RioLozoya_ElVillar.csv  AguaEmbalsada_RioLozoya_LaPinilla.csv  AguaEmbalsada_RioLozoya_PuentesViejas.csv  AguaEmbalsada_RioLozoya_Riosequillo.csv  AguaEmbalsada_RioManzanares_Navacerrada.csv  AguaEmbalsada_RioManzanares_Santillana.csv
docs/: index.html  index_DATOS.html
docs/assets/: script.js  script_DATOS.js  styles.css
