[project]
name = "ab-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmdstanpy==1.2.0",
    "fastapi==0.104.1",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pandas==2.1.3",
    "prophet==1.1.5",
    "pydantic==1.10.14",
    "pytest>=9.0.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "seaborn>=0.13.2",
    "uvicorn[standard]==0.24.0",
]
